[gd_scene load_steps=7 format=2]

[ext_resource path="res://GUI/Xenosphere-RM66.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/Level Complete UI.gd" type="Script" id=2]
[ext_resource path="res://GUI/Font.tres" type="Theme" id=3]
[ext_resource path="res://GUI/Coin.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 120
font_data = ExtResource( 1 )

[node name="Level Complete UI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.678431, 0.670588, 0.670588, 0.780392 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -329.0
margin_top = -458.0
margin_right = 329.0
margin_bottom = 458.0
color = Color( 0.694118, 0.694118, 0.694118, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
visible = false
margin_left = 528.0
margin_top = 227.5
margin_right = 1392.0
margin_bottom = 308.5
custom_fonts/font = SubResource( 1 )
text = "Level Complete!"
align = 1

[node name="Label" type="Label" parent="."]
margin_left = 710.0
margin_top = 138.0
margin_right = 1210.0
margin_bottom = 259.0
custom_colors/font_color = Color( 0.376471, 0.564706, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "00:00"
align = 1

[node name="Coin Container" type="HBoxContainer" parent="."]
margin_left = 710.0
margin_top = 309.0
margin_right = 1210.0
margin_bottom = 379.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin" parent="Coin Container" instance=ExtResource( 4 )]
margin_left = 95.0
margin_right = 165.0
margin_bottom = 70.0

[node name="Coin2" parent="Coin Container" instance=ExtResource( 4 )]
margin_left = 215.0
margin_right = 285.0
margin_bottom = 70.0

[node name="Coin3" parent="Coin Container" instance=ExtResource( 4 )]
margin_left = 335.0
margin_right = 405.0
margin_bottom = 70.0

[node name="Spacer" type="Label" parent="."]
margin_left = 710.0
margin_top = 429.0
margin_right = 1210.0
margin_bottom = 596.0
text = "








"
align = 1

[node name="HBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -140.0
margin_top = -436.0
margin_right = 140.0
margin_bottom = -200.0
grow_horizontal = 0
custom_constants/separation = 70
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next Level" type="Button" parent="HBoxContainer"]
margin_right = 280.0
margin_bottom = 32.0
theme = ExtResource( 3 )
text = "Next Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Try Again" type="Button" parent="HBoxContainer"]
margin_top = 102.0
margin_right = 280.0
margin_bottom = 134.0
theme = ExtResource( 3 )
text = "  Replay   "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level Select" type="Button" parent="HBoxContainer"]
margin_top = 204.0
margin_right = 280.0
margin_bottom = 236.0
theme = ExtResource( 3 )
text = "Level Select"

[connection signal="pressed" from="HBoxContainer/Next Level" to="." method="_on_Next_Level_pressed"]
[connection signal="pressed" from="HBoxContainer/Try Again" to="." method="_on_Try_Again_pressed"]
[connection signal="pressed" from="HBoxContainer/Level Select" to="." method="_on_Level_Select_pressed"]
